Risk-First styling changes

--- a/kite9-server-java/src/main/resources/static/public/templates/risk-first/planner/matrix.css
+++ b/kite9-server-java/src/main/resources/static/public/templates/risk-first/planner/matrix.css
@@ -5,7 +5,7 @@ symbol {
   --kite9-type: svg;
   --kite9-margin: 0 2pt 0 2pt;
   --kite9-sizing: minimize;
-  --kite9-link-inset: 0px;
+  --kite9-link-inset: 0pt;
   --kite9-template: url(template.svg#symbol);
 }
 
