--- a/kite9-server-java/src/main/resources/static/public/templates/risk-first/actions/action-elements.css
+++ b/kite9-server-java/src/main/resources/static/public/templates/risk-first/actions/action-elements.css
@@ -5,6 +5,7 @@
 	--kite9-margin: 10pt;
 	--kite9-padding: 12pt;
 	--kite9-padding-right: 22pt;
+	stroke-width: 1pt;
 }
 
 [k9-elem=action].left {
@@ -16,6 +17,7 @@
 [k9-elem=action] > g > [k9-elem=caption] {
 	--kite9-margin: 0pt;	
 	--kite9-padding: 0pt;
+	fill: black;
 }
 
 [k9-elem=glyph] {
