--- a/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
+++ b/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
@@ -16,80 +16,71 @@
 
 [k9-texture=artifact] {
 	fill: white;
-	fill-opacity: 0.01;
+	fill-opacity: 0.001;
 	stroke: none;
 }
 
 [k9-texture=artifact] text {
-  font-size: 12pt;
-  font-weight: 200;
-  fill: black;
-  text-align: center;
-  --kite9-text-bounds-width: 100pt;
+	font-size: 12pt;
+	font-weight: 200;
+	fill: black;
+	text-align: center;
+	--kite9-text-bounds-width: 100pt;
 }
 
 [k9-elem=description] text {
-  font-style: italic;
-  font-size: 12pt;
-  font-weight: 200;
-  --kite9-direction: right;
+	font-style: italic;
+	font-size: 12pt;
+	font-weight: 200;
+	--kite9-direction: right;
 }
 
 /* Labels */
 
-[k9-elem=label-inner] > g > [k9-elem=caption] {
-	--kite9-padding: 0;
-}
-
-[k9-elem=label-inner] {
-	stroke: none;
-	font-size: 12pt;
-}
-
-[k9-elem=caption] text {
+[k9-elem=caption] {
 	text-align: center;
 }
 
 [k9-elem=label] {
 	--kite9-padding: 10pt;
-  fill: white;
+	fill: white;
 }
 
 /* Arrow, Links */
 
-[k9-elem=arrow]  {
-  fill: black;  
-  fill-opacity: 1; 
+[k9-elem=arrow] {
+	fill: black;
+	fill-opacity: 1;
 }
 
-[k9-elem=arrow] > g > [k9-elem=caption] > g > text {
-  fill: white;
-  fill-opacity: 1; 
+[k9-elem=arrow]>g>[k9-elem=caption]>g>text {
+	fill: white;
+	fill-opacity: 1;
 }
 
 [k9-elem=from],
 [k9-elem=to] {
-  --kite9-marker-reserve: 8pt;
+	--kite9-marker-reserve: 8pt;
 }
 
 [k9-elem=link] {
-  --kite9-link-minimum-length: 30pt;
+	--kite9-link-minimum-length: 30pt;
 }
 
 /* Actions, Glyphs */
-[k9-elem=glyph][k9-texture=background] > g > rect,
+[k9-elem=glyph][k9-texture=background]>g>rect,
 [k9-elem=action] [k9-texture=background] {
-   fill: url(#risk-background);
-   stroke: black; 
-   stroke-width: 1pt;
+	fill: url(#risk-background);
+	stroke: black;
+	stroke-width: 1pt;
 }
 
-[k9-elem=action] > g > [k9-elem=caption] > g > text {
-  fill-opacity: 1; 
-  font-size: 12pt;
-  font-weight: 200;
-  fill: black;
-  text-align: center;
+[k9-elem=action]>g>[k9-elem=caption]>g>text {
+	fill-opacity: 1;
+	font-size: 12pt;
+	font-weight: 200;
+	fill: black;
+	text-align: center;
 }
 
 
@@ -100,10 +91,10 @@
 }
 
 [k9-elem=title] {
-  font-size: 12pt;
-  font-weight: 200;
-  fill: black;
-  text-align: center;
+	font-size: 12pt;
+	font-weight: 200;
+	fill: black;
+	text-align: center;
 }
 
 [k9-elem=code] {
@@ -115,22 +106,37 @@
 
 [k9-elem=risk][k9-texture=background],
 [k9-elem=block][k9-texture=background] {
-   fill: url(#risk-background);
-   stroke: black; 
-   stroke-width: 1pt;
+	fill: url(#risk-background);
+	stroke: black;
+	stroke-width: 1pt;
 }
 
 /* Containers */
 
 [k9-elem=container][k9-texture=background] {
-	fill-opacity: 0.01;	
+	fill-opacity: 0.001;
 }
 
 /* Planner */
 
 [k9-elem=planner-cell],
 [k9-elem=planner-header] {
-  stroke: #aeaeae;
-  stroke-width: 1pt;
+	stroke: #aeaeae;
+	stroke-width: 1pt;
 }
 
+/* Principles */
+
+/** 
+ * Principle cards
+ */
+
+[k9-elem=diagram].principle {
+	fill-opacity: 1; 
+	fill: #f5f5f5; 
+}
+
+[k9-elem=container][k9-texture=background].principle-top {
+	fill: white;
+	fill-opacity: 1;
+}
